namespace Models.Enums;

public enum EventType
{
    Concert,
    Sports,
    Theater,
    ComedyShow
}