@startuml

enum SeatType {
    Chair
    Bench
}

enum PaymentMethod {
    CreditCard
    Invoice
}

enum EventType {
    Concert
    Sports
    Theater
    ComedyShow
}

abstract class BaseEntity {
    + Id: int
    + CreatedAt: DateTime
    + UpdatedAt: DateTime
}

note right of BaseEntity
  Klasser som är markerade med <<BaseEntity>>
  ärver från BaseEntity för att undvika
  ett spindelnät av pilar.
end note

abstract class BookableSpace <<BaseEntity>> {
    + Price: decimal
    + IsBooked: bool
    + EntranceId: int
    + EntranceNavigation: Entrance
    + TicketsNavigation: List<Ticket>
}

class Arena <<BaseEntity>> {
    + Address: string
    + Name: string
    + NumberOfSeats: int
    + NumberOfLoges: int
    + Indoors: bool
    + NumberOfEntrances: int 
    + EntrancesNavigation: List<Entrance> 
    + SeatLayoutsNavigatyion: List<SeatLayout>
    + EventsNavigation: List<Event>
    + LogesNavigation: List<Loge>
    + Arena()
    + Arena(name:string,adress:string,indoors:bool )
}
 
class SeatLayout <<BaseEntity>> {
    - _numberOfRows: int 
    - _numberOfCols: int
    + Name: string 
    + NumberOfRows: int
    + NumberOfCols: int
    + ArenaId: int
    + ArenaNavigation: Arena
    + SeatsNavigation: List<Seat>
    + EventsNavigation: List<Event>
    + SeatLayout()
    + SeatLayout(name:string,numberOfRows:int,numberOfCols:int,arenaId:int)
}

class Entrance <<BaseEntity>> {
    + Name: string
    + VipEntrance: bool
    + ArenaId: int 
    + ArenaNavigation: Arena 
    + Entrance()
    + Entrance(name:string,vip:bool,arenaId:int)
}

class Event <<BaseEntity>> {
    - _date: DateOnly
    - _startTime: TimeOnly
    - _endTime: TimeOnly
    - _price: decimal 
    - _cost: decimal
    + Name: string
    + Date: DateOnly
    + StartTime: TimeOnly
    + EndTime: TimeOnly
    + ReleaseTicketsDate: DateTime
    + Price: decimal
    + Cost: decimal
    + Type: EventType
    + IsFamilyFriendly: bool 
    + ArenaId: int 
    + ArenaNavigation: Arena
    + SeatLayoutId: int
    + SeatLayoutNavigation: SeatLayout
    + TicketsNavigation: List<Ticket>
    + Event()
    + Event(\n\tname:string,\n\tdate:DateOnly,\n\tstartTime:TimeOnly,\n\tendTime:TimeOnly,\n\treleaseTicketDate:DateTime,\n\tprice:decimal,\n\tcost:decimal,\n\ttype:EventType,\n\tisFamilyFriendly:book,\n\tarenaId:int,\n\tseatLayoutId:int\n)
    + CalculateEventLength(): TimeSpan
    + CalculateEarnings(): decimal
    + TypeToString(): string
}

class Ticket <<BaseEntity>> {
    + Price: decimal
    + Description: string 
    + BookingId: int? 
    + BookingNavigation: booking? 
    + EventId: int 
    + EventNavigation: event 
    + BookableSpaceId: int 
    + BookableSpaceNavigation: bookableSpace
    + PendingBookingReference: string? 
    + IsPending: bool 
    + IsBooked: bool 
    + Ticket()
    + Ticket(price:decimal,description:string,eventId:int,bookableSpaceId:int)
}

class Seat <<BaseEntity>>{
    - _rowNumber: int 
    - _colNumber: int 
    + RowNumber: int
    + ColNumber: int
    + Type: SeatType
    + SeatLayoutId: int
    + SeatLayoutNavigation: SeatLayout
    + Seat()
    + Seat(rowNumber:int,colNumber:int,type:SeatType,seatLayoutId:int,price:decimal,entranceId:int)
    + TypeToString(): string 
}

class Loge <<BaseEntity>> { 
    - _numberOfPeople: int
    + Name: string
    + LogeNumber: string
    + NumberOfPeople: int
    + ArenaId: int 
    + ArenaNavigation: Arena
    + Loge()
    + Loge(name:string,logeNumber:string,numberOfPeople:int)
}

class Booking <<BaseEntity>> {
    - _totalPrice: decimal
    + ReferenceNumber: string 
    + Email: string 
    + TotalPrice: decimal 
    + IsPaid: bool 
    + ConfirmationPdfPath: string 
    + InvoicePdfPath: string? 
    + PaymentNavigation: Payment? 
    + TicketsNavigation: List<Ticket>
    + Booking()
    + Booking(email:string,totalPrice:decimal,isPaid:bool)
}

class Payment <<BaseEntity>> {
    + BookingId: int 
    + BookingNavigation: Booking 
    + PaymentMethod: PaymentMethod 
    + Payment()
    + Payment(bookingId:int,method:PaymentMethod)
}

Arena "1" *-- "0..*" Event
BookableSpace  o-- "1" Entrance
Arena "1" *-- "1..*" Entrance
Ticket "1..*" *-- "0..1" Booking
Booking "1" o-- "0..1" Payment
Ticket "1..*" o-- "1"  Event

BookableSpace <|-- Seat
BookableSpace <|-- Loge
Ticket "0..*" o-- "1" BookableSpace

SeatLayout "1" *-- "1..*" Seat
Arena "1" *-- "0..*" SeatLayout
Event "0..1" o-- "1" SeatLayout
Arena "1" *-- "0..*" Loge

@enduml